kind/calculator-ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: calculator-app
  labels:
    app: calculator
spec:
  containers:
  - name: calculator-app
    image: ups216/boathouse-calculator:latest
    imagePullPolicy: Always
    ports:
      - containerPort: 3001
        protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: calculator-service
spec:
  selector:
    app: calculator
  ports:
  - port: 3001
    targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/calculator"
        backend:
          service:
            name: calculator-service
            port:
              number: 3001
---
